[gd_scene load_steps=3 format=2]

[ext_resource path="res://input/joy_calibration/Remote.gd" type="Script" id=1]
[ext_resource path="res://input/joy_calibration/Stick.tscn" type="PackedScene" id=2]

[node name="Remote" type="HBoxContainer"]
margin_left = 5.0
margin_top = 4.0
margin_right = 694.0
margin_bottom = 351.0
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="SpacerL" type="Control" parent="."]
margin_right = 82.0
margin_bottom = 347.0
size_flags_horizontal = 3

[node name="StickL" parent="." instance=ExtResource( 2 )]
margin_left = 90.0
margin_top = 0.0
margin_right = 340.0
margin_bottom = 250.0

[node name="StickR" parent="." instance=ExtResource( 2 )]
margin_left = 348.0
margin_top = 0.0
margin_right = 598.0
margin_bottom = 250.0

[node name="SpacerR" type="Control" parent="."]
margin_left = 606.0
margin_right = 689.0
margin_bottom = 347.0
size_flags_horizontal = 3

[connection signal="activated" from="StickL" to="." method="_on_StickL_activated"]
[connection signal="disable" from="StickL" to="." method="_on_disable"]
[connection signal="activated" from="StickR" to="." method="_on_StickR_activated"]
[connection signal="disable" from="StickR" to="." method="_on_disable"]
